Adding central test suite